# Cody-C

./: .gitignore  Cargo.toml  README.md  cspell.json  file.ansi  out.ans
.github/workflows/: build-and-test.yml  tests.yml
benches/: async_read_lines.rs  tokio.rs
examples/: stream.rs  zerocopy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: zerocopy.rs
src/: decode.rs  embedded_io_async.rs  framed_read.rs  framed_write.rs  futures_io.rs  io.rs  lib.rs  prelude.rs  test.rs  tests.rs  tokio.rs
src/codec/: any.rs  bincode.rs  bytes.rs  length.rs  lines.rs  mod.rs  needle.rs  test.rs
src/codec/any/: test.rs
src/codec/bytes/: test.rs
src/codec/length/: test.rs
src/codec/lines/: test.rs
src/decode/: async_read.rs  decoder.rs  frame.rs  framed_read.rs  maybe_decoded.rs  mod.rs  prelude.rs
src/decode/framed_read/: test.rs
src/demo/: codec.rs  header.rs  mod.rs  packet.rs  payload.rs  payload_content.rs  payload_type.rs  raw_packet.rs
src/encode/: async_write.rs  encoder.rs  framed_write.rs  mod.rs  prelude.rs
src/encode/framed_write/: test.rs
src/logging/: formatter.rs  mod.rs
