[package]
name = "cody-c"
version = "0.3.0-rc.1"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple and fast codec for encoding and decoding data in no_std environments"
repository = "https://github.com/JadKHaddad/Cody-C"
keywords = ["codec", "no_std", "embedded", "encode", "decode"]

[features]
default = ["char-fmt"]
std = []
tokio = ["dep:tokio"]
futures-io = ["futures/std"]
embedded-io-async = ["dep:embedded-io-async"]
log = ["dep:log"]
tracing = ["dep:tracing"]
defmt = ["dep:defmt"]
pretty-hex-fmt = []
char-fmt = []
buffer-early-shift = []

[dependencies]
tokio = { version = "1.37.0", optional = true, default-features = false, features = [
    "io-util",
] }
embedded-io-async = { version = "0.6.1", optional = true }
log = { version = "0.4.22", default-features = false, optional = true }
tracing = { version = "0.1.40", default-features = false, optional = true }
defmt = { version = "0.3.6", default-features = false, optional = true }
futures = { version = "0.3.31", default-features = false }
heapless = { version = "0.8.0", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
